--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: GFM
 theme: jekyll-theme-minimal
 logo: "img/picture_website2.png"
-title:              "Sarah Aguasvivas Manzano"
+title:              "Sarah Aguasvivas"
 description:        "I am a fifth year PhD Candidate in Computer Science at the University of Colorado Boulder. My academic background includes both Aerospace Engineering and Computer Science. I've contributed in research ranging from wind turbine aerodynamics to soft robotics, including control in autonomous vehicles. 
 <br><br>
 I am also passionate in the advancement of STEM in the Dominican Republic, my home country.
