--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 markdown: GFM
 theme: jekyll-theme-minimal
 logo: "img/picture_website2.png"
-title:              "Sarah Aguasvivas"
+title:              "Sarah Aguasvivas Manzano"
 description:        "I am a PhD Candidate in Computer Science at the University of Colorado Boulder. My academic background includes both Aerospace Engineering and Computer Science. I've contributed to research ranging from wind turbine aerodynamics to soft robotics, including control in autonomous vehicles. 
 <br><br>
-I am also passionate about the advancement of STEM in the Dominican Republic, my home country and about Brazilian Jiu Jitsu as a martial art and lifestyle that informs my daily efforts.
+I am also passionate about the advancement of STEM and general education in the Dominican Republic, my home country, and about Brazilian Jiu Jitsu as a martial art and lifestyle that informs my daily efforts.
 "
 author_name:        "Sarah Aguasvivas Manzano" # change this to your name
 logo_url:           "img/picture_website2.png" # Get it from GitHub API: https://api.github.com/users/<username>
