--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,14 @@
 [[params.social]]
     icon = "linkedin"
-    icon_pack = "fa"
+    icon_pack = "fab fa-linkedin-in"
     link = "//linkedin.com/in/sarahaguasvivas"
 
  [[params.social]]
     icon = "github"
-    icon_pack = "fa"
+    icon_pack = "fab fa-github"
     link = "//github.com/sarahaguasvivas"
     
   [[params.social]]
     icon = "google-scholar-square"
-    icon_pack = "fa"
+    icon_pack = ""
     link = "//scholar.google.com/citations?user=fc-O9j4AAAAJ&hl=en&oi=ao"
