--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ markdown: GFM
 theme: jekyll-theme-minimal
 logo: "img/picture_website2.png"
 title:              "Sarah Aguasvivas Manzano"
-description:        "I am a PhD Candidate in Computer Science at the University of Colorado Boulder. My academic background includes both Aerospace Engineering and Computer Science. I've contributed to research ranging from wind turbine aerodynamics to soft robotics, including control in autonomous vehicles. 
+description:        "I am a PhD graduate in Computer Science from the University of Colorado Boulder. My academic background includes both Aerospace Engineering and Computer Science. I've contributed to research ranging from wind turbine aerodynamics to soft robotics, including control in autonomous vehicles. I will be working at Apple starting July, 2022.  
 <br><br>
 I am also passionate about the advancement of STEM and general education in the Dominican Republic, my home country, and about Brazilian Jiu Jitsu as a martial art and lifestyle that informs my daily efforts.
 <br><br>
